# dns_shop_parser

./: .dockerignore  Dockerfile  README.md  constants.py  example.py  parser_dns.py  pyproject.toml  requirements.txt  requirements_test.txt
dns_shop_parser/: __init__.py  constants.py  logging_module.py  parser_dns.py
tests/: conftest.py  test_parser.py
tests/assets/: microdata.json  product.html  products.xml  sitemap.xml
